--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -28,15 +28,16 @@
     top: 50%; 
     left: 25px;
     transform: translate(0, -50%);
-    z-index: 2;
+    z-index: 0;
   }
   .right-button {
     top: 50%; 
     right: 25px;
     transform: translate(0, -50%);
-    z-index: 2;
+    z-index: 0;
   }
   img {
+    z-index: -2;
     position: absolute;
     .width-100();
     display: none;
